work on script compiling